<resources>
    <string name="app_name">SIR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="GOPREMIUM">GO PREMIUM</string>
    <string name="AnnualPlan">Annual Plan *</string>
    <string name="dollaryear">$ 35.99/year</string>
    <string name="ValuePlan">Value Plan *</string>
    <string name="dollarmonth">$ 3.99/month</string>
    <string name="Restore">Restore</string>
    <string name="Purchases">Purchases</string>
    <string name="Termsconditionsapply">*Terms &amp; conditions apply:</string>
    <string name="USD1199">USD 11.99</string>
    <string name="oneimepaymentforcreatinganewcompany">\u0020 one-time payment for creating a new company with the same credentials</string>
    <string name="USD399">USD 3.99</string>
    <string name="onetimepaymentperadditionaluser">\u0020 one-time payment per additional user (for assigning additional users)</string>
    <string name="Skipsubscription">Skip subscription</string>
    <string name="trytheappforaperiodof14days">try the app for a period of 14-days</string>
    <string name="startfreetrial">start free trial</string>

    <string name="Customizeyourexperience">Customize your experience</string>
    <string name="InviteFriends">Invite Friends</string>
    <string name="Customize">Customize</string>
    <string name="FAQs">FAQs</string>
    <string name="Language">Language</string>
    <string name="Abouttheapp">About the app</string>
    <string name="Ratetheapp">Rate the app</string>
    <string name="TermsofUse">Terms of Use</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="Support">Support</string>


    <string name="InvoiceNo">Invoice No.</string>
    <string name="DueDate">Due Date</string>
    <string name="InvoiceTo">Invoice To</string>
    <string name="INVOICEITEMS">INVOICE ITEMS</string>
    <string name="additem">add item</string>
    <string name="SubTotal">Sub Total</string>
    <string name="Discount">Discount</string>
    <string name="Tax">Tax</string>
    <string name="createinvoice">create invoice</string>

</resources>
