<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.receipt.invoice.stock.sirproject.Home.Settings_Activity">


    <include layout="@layout/toolbar">

    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Customizeyourexperience"
                android:layout_centerHorizontal="true"
                android:id="@+id/description"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp">

                <TextView
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/InviteFriends"
                    android:drawableLeft="@drawable/settings_invite_friends_icon"
                    android:drawablePadding="25dp"
                    android:id="@+id/invite"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="15dp"
                    >
                </View>


                <TextView
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Customize"
                    android:drawableLeft="@drawable/settings_customize_icon"
                    android:drawablePadding="25dp"
                    android:id="@+id/customize"
                    android:layout_marginTop="15dp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="15dp"
                    >
                </View>

                <TextView
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FAQs"
                    android:drawableLeft="@drawable/settings_faqs_icon"
                    android:drawablePadding="25dp"
                    android:id="@+id/faqs"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="15dp"
                    >
                </View>
                <TextView
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Language"
                    android:drawableLeft="@drawable/settings_language_icon"
                    android:drawablePadding="25dp"
                    android:id="@+id/language"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="15dp"
                    >
                </View>

                <TextView
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Abouttheapp"
                    android:drawableLeft="@drawable/settings_about_app_icon"
                    android:drawablePadding="25dp"
                    android:id="@+id/about"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="15dp"
                    >
                </View>

                <TextView
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ratetheapp"
                    android:drawableLeft="@drawable/settings_rate_app_icon"
                    android:drawablePadding="25dp"
                    android:id="@+id/rate"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="15dp"
                    >
                </View>

                <TextView
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TermsofUse"
                    android:drawableLeft="@drawable/settings_terms_icon"
                    android:drawablePadding="25dp"
                    android:id="@+id/terms"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="15dp"
                    >
                </View>

                <TextView
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PrivacyPolicy"
                    android:drawableLeft="@drawable/settings_privacy_icon"
                    android:drawablePadding="25dp"
                    android:id="@+id/privacy"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="15dp"
                    >
                </View>
                <TextView
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Support"
                    android:drawableLeft="@drawable/settings_support_icon"
                    android:drawablePadding="25dp"
                    android:id="@+id/support"/>





            </LinearLayout>


        </RelativeLayout>
    </ScrollView>



</RelativeLayout>
