<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.receipt.invoice.stock.sirproject.Home.Go_Premium_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >




            <RelativeLayout
                android:id="@+id/bluerelative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_blue_gradient"
                android:paddingBottom="25dp"
                android:elevation="10dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back_btn"
                    android:tint="#ffffff"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/back"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GOPREMIUM"
                    android:textColor="@color/white"
                    android:layout_below="@+id/back"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:id="@+id/heading"
                    />

                <RelativeLayout
                    android:id="@+id/r1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/premium_pkg_curve"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_below="@+id/heading"
                    android:layout_marginTop="30dp"
                    android:padding="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AnnualPlan"
                        android:id="@+id/annualtxt"
                        android:textColor="@color/darkbluefont"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollaryear"
                        android:id="@+id/annualprice"
                        android:layout_below="@+id/annualtxt"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/darkbluefont"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/plan_checked"
                        android:id="@+id/selection1"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/r2"
                    android:layout_below="@id/r1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pkg_unselect_curve"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ValuePlan"
                        android:id="@+id/monthtxt"
                        android:textColor="@color/lightwhite"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dollarmonth"
                        android:id="@+id/monthprice"
                        android:layout_below="@+id/monthtxt"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/lightwhite"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/checked"
                        android:id="@+id/selection2"/>

                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/r3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pkg_unselect_curve"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_below="@+id/r2"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Restore"
                        android:id="@+id/restoretxt"
                        android:textColor="@color/lightwhite"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Purchases"
                        android:id="@+id/purchasestxt"
                        android:layout_below="@+id/restoretxt"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/lightwhite"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/restore_purchases"
                        android:id="@+id/selection3"
                        />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Termsconditionsapply"
                    android:textColor="@color/white"
                    android:layout_below="@+id/r3"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="30dp"
                    android:textSize="8sp"
                    android:id="@+id/termstxt"/>

                <LinearLayout
                    android:id="@+id/l1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/termstxt"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/USD1199"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        android:textStyle="bold"
                        android:id="@+id/termsdescprice1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oneimepaymentforcreatinganewcompany"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        android:id="@+id/termdescription1"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/l1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/USD399"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        android:textStyle="bold"
                        android:id="@+id/termsdescprice2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onetimepaymentperadditionaluser"
                        android:textColor="@color/white"
                        android:textSize="8sp"
                        android:id="@+id/termdescription2"/>

                </LinearLayout>





            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bluerelative"
                android:id="@+id/skiptxt"
                android:text="@string/Skipsubscription"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="?actionBarSize"
                android:textSize="15sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/skiptxt"
                android:id="@+id/skipdescription"
                android:text="@string/trytheappforaperiodof14days"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textColor="@color/darkblue"

                />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/skipdescription"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="start free trial"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@drawable/blue_btn_curve"
                android:id="@+id/startfree"/>

        </RelativeLayout>
    </ScrollView>
    <ImageView
        android:visibility="gone"
        android:id="@+id/avibackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"/>
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="100dp"
        style="@style/AVLoadingIndicatorView"
        android:visibility="gone"
        app:indicatorName="BallClipRotatePulseIndicator"

        />
</RelativeLayout>
